# computer-graphics

./: Brasenham.c  BrasenhamLineDrawing.c  CMakeLists.txt  MidPointCircle.c  assignment2.c  main.c  readme.md
